# sudoku

./: CMakeLists.txt  README
libsudoku/: CMakeLists.txt  sudokusolver.cpp  sudokusolver.hpp
modules/: FindGecode.cmake
src/: CMakeLists.txt  sudokusolve.cpp
